--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@tomtom-international/web-sdk-services": "^6.18.0",
         "croppr": "^2.3.1",
         "microtip": "^0.2.2",
         "moment": "^2.29.1",
