--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "croppr": "^2.3.1",
         "microtip": "^0.2.2",
         "moment": "^2.29.1",
+        "require": "^2.4.20",
         "vue": "^2.6.14"
     }
 }
