--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
-        "nesbot/carbon": "^2.53"
+        "nesbot/carbon": "^2.53",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
